--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table cellspacing="20">
-        <td><img src="../HTML-personal site\images\endework2.png" alt="Endework Profile picture"></td>
+        <td><img src="../images\endework2.png" alt="Endework Profile picture"></td>
         <td><h1>Endework Abera</h1>
    
             <strong><em><p> Founder and CTO of the  <a href="https://www.linkedin.com/in/endeworkabera/">new app.</a></p></em></strong>
